adding data and upadte a little bit

--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7047502b",
+   "id": "66d5a825",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b320503",
+   "id": "fb7db614",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b33c17ec",
+   "id": "17cbe9d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0a27eddb",
+   "id": "2645c672",
    "metadata": {},
    "outputs": [
     {
@@ -420,8 +420,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "714f17af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6adce224",
+   "id": "e5aafd43",
    "metadata": {},
    "outputs": [],
    "source": []
